Proper URL encoding.